[KARAF-2221] The admin service is not safe when used to create / start agents quickly
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@1455901 13f79535-47bb-0310-9956-ffa450edef68